# ccscience-sync

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  ccscience.py  ccscience_sync.py  install-macos.command  install-windows.bat  pyproject.toml  uninstall-macos.command  uninstall-windows.bat
.github/workflows/: build.yml  ci.yml
assets/: icon.icns
docs/: INSTALL.md  PUBLISHING.md  USER_GUIDE.md  USER_GUIDE.zh-CN.md
scripts/: install-macos.sh  install-windows.ps1
tests/: test_ccscience.py  test_ccscience_sync.py
