[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ccscience-sync"
version = "0.2.6"
description = "Sync ccswitch or Claude Code model settings into Claude Science."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "ccscience-sync contributors" }
]
keywords = ["claude", "claude-code", "ccswitch", "claude-science"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Utilities"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Qinbf/ccscience-sync"
Issues = "https://github.com/Qinbf/ccscience-sync/issues"

[project.scripts]
ccscience-sync = "ccscience_sync:main"

[tool.setuptools]
py-modules = ["ccscience_sync"]
