[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ccscience"
version = "0.5.1"
description = "Use the selected CC.Switch or Claude Code model in Claude Science."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "ccscience contributors" }
]
keywords = ["claude", "claude-code", "ccswitch", "claude-science"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Utilities"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Qinbf/ccscience"
Issues = "https://github.com/Qinbf/ccscience/issues"

[project.scripts]
ccscience = "ccscience:main"

[tool.setuptools]
py-modules = ["ccscience"]
